JVM opts; minor tweaks